Adding Kinect Samples

--- a/basic/11_OpenCVMotion/opencv.cfg
+++ b/basic/11_OpenCVMotion/opencv.cfg
@@ -36,6 +36,30 @@
             <VAL>
                 <D type="TXT">default</D>
             </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
         </PARAM>
         <PARAM name="recognition_mode" type="NUM" property="published" options="Face,Gpu Motion,Contour,Color,Motion Detection,Blobs,Threshold,Body,Face Recognition Memorize,Face Recognition Remember">
             <VAL>
@@ -44,7 +68,7 @@
         </PARAM>
         <PARAM name="threshold" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">22</D>
+                <D type="FUNCTION">26</D>
             </VAL>
         </PARAM>
         <PARAM name="threshold_max" type="FUNCTION" property="published">
@@ -125,12 +149,12 @@
                 <D type="INT">20</D>
             </VAL>
         </PARAM>
-        <PARAM name="blob_min_area" type="FUNCTION">
+        <PARAM name="blob_min_area" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">1000</D>
+                <D type="FUNCTION">10</D>
             </VAL>
         </PARAM>
-        <PARAM name="blob_max_area" type="FUNCTION">
+        <PARAM name="blob_max_area" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">50000</D>
             </VAL>
@@ -183,6 +207,11 @@
                 <D type="FUNCTION">30</D>
             </VAL>
         </PARAM>
+        <PARAM name="echo_result" type="FUNCTION" property="published">
+            <VAL>
+                <D type="FUNCTION">0.99</D>
+            </VAL>
+        </PARAM>
     </CONFIGPARAMS>
     <PRECONFIGS>
         <PRE>
@@ -217,6 +246,42 @@
             <P name="saving_images_time">0</P>
             <P name="saving_images_size_width">0</P>
             <P name="saving_images_size_height">0</P>
+        </PRE>
+        <PRE>
+            <P name="outlet">1</P>
+            <P name="texture">1</P>
+        </PRE>
+        <PRE>
+            <P name="outlet">2</P>
+            <P name="texture">2</P>
+        </PRE>
+        <PRE>
+            <P name="outlet">2</P>
+            <P name="texture">3</P>
+        </PRE>
+        <PRE>
+            <P name="outlet">2</P>
+            <P name="texture">4</P>
+        </PRE>
+        <PRE>
+            <P name="outlet">2</P>
+            <P name="texture">5</P>
+        </PRE>
+        <PRE>
+            <P name="outlet">2</P>
+            <P name="texture">6</P>
+        </PRE>
+        <PRE>
+            <P name="outlet">2</P>
+            <P name="texture">7</P>
+        </PRE>
+        <PRE>
+            <P name="outlet">2</P>
+            <P name="texture">8</P>
+        </PRE>
+        <PRE>
+            <P name="outlet">2</P>
+            <P name="texture">9</P>
         </PRE>
     </PRECONFIGS>
 </MOCONFIG>
