--- a/basic/11_OpenCVMotion/particles.cfg
+++ b/basic/11_OpenCVMotion/particles.cfg
@@ -327,9 +327,9 @@
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="rotatey_particle" type="ROTATEY">
+        <PARAM name="rotatey_particle" type="ROTATEY" property="published">
             <VAL>
-                <D type="FUNCTION">0.0</D>
+                <D type="FUNCTION">0</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatez_particle" type="ROTATEZ">
@@ -339,7 +339,7 @@
         </PARAM>
         <PARAM name="scalex_particle" type="SCALEX">
             <VAL>
-                <D type="FUNCTION">4</D>
+                <D type="FUNCTION">8</D>
             </VAL>
             <VAL>
                 <D type="FUNCTION">0.11*15</D>
@@ -347,7 +347,7 @@
         </PARAM>
         <PARAM name="scaley_particle" type="SCALEY">
             <VAL>
-                <D type="FUNCTION">4</D>
+                <D type="FUNCTION">5</D>
             </VAL>
             <VAL>
                 <D type="FUNCTION">0.11*15</D>
@@ -470,7 +470,7 @@
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="forming" type="NUM">
+        <PARAM name="forming" type="NUM" property="published">
             <VAL>
                 <D type="INT">1</D>
             </VAL>
@@ -478,9 +478,9 @@
                 <D type="INT">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="forming_speed" type="NUM">
+        <PARAM name="forming_speed" type="NUM" property="published">
             <VAL>
-                <D type="INT">40000</D>
+                <D type="INT">50000</D>
             </VAL>
             <VAL>
                 <D type="INT">20000</D>
@@ -498,7 +498,7 @@
                 <D type="INT">25000</D>
             </VAL>
         </PARAM>
-        <PARAM name="speed_reaction" type="FUNCTION">
+        <PARAM name="speed_reaction" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">0.01</D>
             </VAL>
@@ -509,7 +509,7 @@
                 <D type="FUNCTION">0.02</D>
             </VAL>
         </PARAM>
-        <PARAM name="motion_sensitivity" type="NUM">
+        <PARAM name="motion_sensitivity" type="NUM" property="published">
             <VAL>
                 <D type="INT">4</D>
             </VAL>
@@ -542,7 +542,7 @@
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="orderingmode" type="NUM" options="NONE,ZDEPTHTEST,ZPOSITION,COMPLETE">
+        <PARAM name="orderingmode" type="NUM" property="published" options="NONE,ZDEPTHTEST,ZPOSITION,COMPLETE">
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
