--- a/basic/13_OpenFace/MASK.cfg
+++ b/basic/13_OpenFace/MASK.cfg
@@ -53,7 +53,37 @@
         </PARAM>
         <PARAM name="alpha" type="ALPHA" property="published">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">1</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">1</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">1</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">1</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">1</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">1</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">1</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">1</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">1</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">1</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">1</D>
             </VAL>
         </PARAM>
         <PARAM name="color" type="COLOR">
@@ -79,12 +109,33 @@
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="object" type="TEXT">
+        <PARAM name="object" type="TEXT" property="published">
             <VAL>
-                <D type="TXT">mesh-68-puntos5.dae</D>
+                <D type="TXT">mesh-68-puntos5_1.dae</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">mesh-68-puntos5_2.dae</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">mesh-68-puntos5_3.dae</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">mesh-68-puntos5_4.dae</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">mesh-68-puntos5_5.dae</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">mesh-68-puntos5_6.dae</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">mesh-68-puntos5_7.dae</D>
             </VAL>
         </PARAM>
         <PARAM name="texture" type="TEXTURE">
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
             <VAL>
                 <D type="TXT">default</D>
             </VAL>
@@ -150,22 +201,76 @@
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="blending" type="BLENDING">
+        <PARAM name="blending" type="BLENDING" property="published">
             <VAL>
-                <D type="NUM">0</D>
+                <D type="NUM">9</D>
             </VAL>
         </PARAM>
         <PARAM name="translatex" type="TRANSLATEX">
             <VAL>
                 <D type="FUNCTION">0.0</D>
             </VAL>
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
         </PARAM>
         <PARAM name="translatey" type="TRANSLATEY">
             <VAL>
-                <D type="FUNCTION">0.05*(4/3)*(screen_height/screen_width)</D>
+                <D type="FUNCTION">0.01+0.05*(4/3)*(screen_height/screen_width)</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.01+0.05*(4/3)*(screen_height/screen_width)</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.01+0.05*(4/3)*(screen_height/screen_width)</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.01+0.05*(4/3)*(screen_height/screen_width)</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.04+0.05*(4/3)*(screen_height/screen_width)</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.05+0.05*(4/3)*(screen_height/screen_width)</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.01+0.05*(4/3)*(screen_height/screen_width)</D>
             </VAL>
         </PARAM>
         <PARAM name="translatez" type="TRANSLATEZ">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
             <VAL>
                 <D type="FUNCTION">0.0</D>
             </VAL>
@@ -189,10 +294,34 @@
             <VAL>
                 <D type="FUNCTION">scalez</D>
             </VAL>
+            <VAL>
+                <D type="FUNCTION">scalez</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">scalez</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">scalez</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">scalez</D>
+            </VAL>
         </PARAM>
         <PARAM name="scaley" type="SCALEY">
             <VAL>
-                <D type="FUNCTION">-scalez*(4/3)*screen_height/screen_width</D>
+                <D type="FUNCTION">-0.01-scalez*(4/3)*screen_height/screen_width</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">-0.01-scalez*(4/3)*screen_height/screen_width</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">-0.01-scalez*(4/3)*screen_height/screen_width</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">-0.01-scalez*(4/3)*screen_height/screen_width</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">-0.05-scalez*(4/3)*screen_height/screen_width</D>
             </VAL>
         </PARAM>
         <PARAM name="scalez" type="SCALEZ" property="published">
@@ -479,34 +608,136 @@
     </CONFIGPARAMS>
     <PRECONFIGS>
         <PRE>
+            <P name="inlet">0</P>
+            <P name="alpha">0</P>
+            <P name="object">0</P>
             <P name="texture">0</P>
+            <P name="vertices_openface">0</P>
+            <P name="scalex">0</P>
+            <P name="scaley">0</P>
+            <P name="translatex">0</P>
+            <P name="translatey">0</P>
+            <P name="translatez">0</P>
         </PRE>
         <PRE>
+            <P name="inlet">1</P>
+            <P name="alpha">1</P>
+            <P name="object">1</P>
             <P name="texture">1</P>
+            <P name="vertices_openface">1</P>
+            <P name="scalex">1</P>
+            <P name="scaley">1</P>
+            <P name="translatex">1</P>
+            <P name="translatey">1</P>
+            <P name="translatez">1</P>
         </PRE>
         <PRE>
+            <P name="inlet">2</P>
+            <P name="alpha">2</P>
+            <P name="object">2</P>
             <P name="texture">2</P>
+            <P name="vertices_openface">2</P>
+            <P name="scalex">2</P>
+            <P name="scaley">2</P>
+            <P name="translatex">2</P>
+            <P name="translatey">2</P>
+            <P name="translatez">2</P>
         </PRE>
         <PRE>
+            <P name="inlet">3</P>
+            <P name="alpha">3</P>
+            <P name="object">3</P>
             <P name="texture">3</P>
+            <P name="vertices_openface">3</P>
+            <P name="scalex">3</P>
+            <P name="scaley">3</P>
+            <P name="translatex">3</P>
+            <P name="translatey">3</P>
+            <P name="translatez">3</P>
         </PRE>
         <PRE>
+            <P name="inlet">4</P>
+            <P name="alpha">4</P>
+            <P name="object">4</P>
             <P name="texture">4</P>
+            <P name="vertices_openface">4</P>
+            <P name="scalex">4</P>
+            <P name="scaley">4</P>
+            <P name="translatex">4</P>
+            <P name="translatey">4</P>
+            <P name="translatez">4</P>
         </PRE>
         <PRE>
+            <P name="inlet">5</P>
+            <P name="alpha">5</P>
+            <P name="object">5</P>
             <P name="texture">5</P>
+            <P name="vertices_openface">5</P>
+            <P name="scalex">5</P>
+            <P name="scaley">5</P>
+            <P name="translatex">5</P>
+            <P name="translatey">5</P>
+            <P name="translatez">5</P>
         </PRE>
         <PRE>
+            <P name="inlet">6</P>
+            <P name="alpha">6</P>
+            <P name="object">6</P>
             <P name="texture">6</P>
+            <P name="vertices_openface">6</P>
+            <P name="scalex">6</P>
+            <P name="scaley">6</P>
+            <P name="translatex">6</P>
+            <P name="translatey">6</P>
+            <P name="translatez">6</P>
         </PRE>
         <PRE>
+            <P name="inlet">7</P>
+            <P name="alpha">7</P>
+            <P name="object">7</P>
             <P name="texture">7</P>
+            <P name="vertices_openface">7</P>
+            <P name="scalex">7</P>
+            <P name="scaley">7</P>
+            <P name="translatex">7</P>
+            <P name="translatey">7</P>
+            <P name="translatez">7</P>
         </PRE>
         <PRE>
+            <P name="inlet">8</P>
+            <P name="alpha">8</P>
+            <P name="object">8</P>
             <P name="texture">8</P>
+            <P name="vertices_openface">8</P>
+            <P name="scalex">8</P>
+            <P name="scaley">8</P>
+            <P name="translatex">8</P>
+            <P name="translatey">8</P>
+            <P name="translatez">8</P>
         </PRE>
         <PRE>
+            <P name="inlet">9</P>
+            <P name="alpha">9</P>
+            <P name="object">9</P>
             <P name="texture">9</P>
+            <P name="vertices_openface">9</P>
+            <P name="scalex">9</P>
+            <P name="scaley">9</P>
+            <P name="translatex">9</P>
+            <P name="translatey">9</P>
+            <P name="translatez">9</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">10</P>
+            <P name="alpha">10</P>
+            <P name="object">10</P>
+            <P name="texture">10</P>
+            <P name="vertices_openface">10</P>
+            <P name="scalex">10</P>
+            <P name="scaley">10</P>
+            <P name="translatex">10</P>
+            <P name="translatey">10</P>
+            <P name="translatez">10</P>
         </PRE>
     </PRECONFIGS>
 </MOCONFIG>
