--- a/kinect/00_KinectBasic/icon_right_hand.cfg
+++ b/kinect/00_KinectBasic/icon_right_hand.cfg
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
-<MOCONFIG majorversion="0" minorversion="0">
+<MOCONFIG majorversion="-1665915468" minorversion="-1967844427">
     <DEFINITION name="icon" class="moEffect" />
     <UPDATE />
     <CONFIGPARAMS>
         <PARAM name="inlet" type="INLET">
             <VAL>
-                <D type="TXT">VARIABLE1</D>
+                <D type="TXT">RHX</D>
+                <D type="TXT">NUMERIC</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">RHY</D>
                 <D type="TXT">NUMERIC</D>
             </VAL>
         </PARAM>
@@ -15,16 +19,16 @@
                 <D type="TXT"></D>
             </VAL>
         </PARAM>
-        <PARAM name="alpha" type="ALPHA" property="published">
+        <PARAM name="alpha" type="ALPHA">
             <VAL>
-                <D type="FUNCTION">1</D>
+                <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="color" type="COLOR" property="published">
+        <PARAM name="color" type="COLOR">
             <VAL>
-                <D type="FUNCTION" code="RED">1.0</D>
-                <D type="FUNCTION" code="GREEN">1.0</D>
-                <D type="FUNCTION" code="BLUE">1.0</D>
+                <D type="FUNCTION" code="RED">1.000000</D>
+                <D type="FUNCTION" code="GREEN">1.000000</D>
+                <D type="FUNCTION" code="BLUE">1.000000</D>
                 <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
         </PARAM>
@@ -38,82 +42,79 @@
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="texture" type="TEXTURE" property="published">
+        <PARAM name="texture" type="TEXTURE">
             <VAL>
-                <D type="TXT">CVRESULT2</D>
+                <D type="TXT">circulo_astro.png</D>
             </VAL>
             <VAL>
-                <D type="TXT">CVBLOBS</D>
+                <D type="TXT">default</D>
             </VAL>
             <VAL>
-                <D type="TXT">CVBLOBS</D>
+                <D type="TXT">default</D>
             </VAL>
             <VAL>
-                <D type="TXT">CVBLOBS</D>
+                <D type="TXT">default</D>
             </VAL>
             <VAL>
-                <D type="TXT">CVBLOBS</D>
+                <D type="TXT">default</D>
             </VAL>
             <VAL>
-                <D type="TXT">CVBLOBS</D>
+                <D type="TXT">default</D>
             </VAL>
             <VAL>
-                <D type="TXT">CVBLOBS</D>
+                <D type="TXT">default</D>
             </VAL>
             <VAL>
-                <D type="TXT">CVBLOBS</D>
+                <D type="TXT">default</D>
             </VAL>
             <VAL>
-                <D type="TXT">CVBLOBS</D>
+                <D type="TXT">default</D>
             </VAL>
             <VAL>
-                <D type="TXT">CVBLOBS</D>
-            </VAL>
-        </PARAM>
-        <PARAM name="blending" type="BLENDING" property="published">
-            <VAL>
-                <D type="NUM">3</D>
+                <D type="TXT">default</D>
             </VAL>
         </PARAM>
-        <PARAM name="width" type="FUNCTION" property="published">
+        <PARAM name="blending" type="BLENDING">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="width" type="FUNCTION">
             <VAL>
                 <D type="FUNCTION">1.0</D>
             </VAL>
-            <VAL>
-                <D type="FUNCTION">height</D>
-            </VAL>
         </PARAM>
-        <PARAM name="height" type="FUNCTION" property="published">
+        <PARAM name="height" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">1.0*240/320</D>
-            </VAL>
-            <VAL>
-                <D type="FUNCTION">screen_height/screen_width</D>
+                <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="translatex" type="TRANSLATEX">
             <VAL>
-                <D type="FUNCTION">0.0</D>
+                <D type="FUNCTION">0.161883</D>
             </VAL>
         </PARAM>
         <PARAM name="translatey" type="TRANSLATEY">
             <VAL>
-                <D type="FUNCTION">0.0</D>
+                <D type="FUNCTION">0.251633</D>
             </VAL>
         </PARAM>
         <PARAM name="rotate" type="ROTATEZ">
             <VAL>
-                <D type="FUNCTION">0.0</D>
+                <D type="FUNCTION">time*10</D>
             </VAL>
         </PARAM>
         <PARAM name="scalex" type="SCALEX">
             <VAL>
-                <D type="FUNCTION">1</D>
+                <D type="FUNCTION">0.1</D>
             </VAL>
         </PARAM>
         <PARAM name="scaley" type="SCALEY">
             <VAL>
-                <D type="FUNCTION">1</D>
+                <D type="FUNCTION">0.1</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">-0.1</D>
             </VAL>
         </PARAM>
         <PARAM name="guides" type="NUM" options="No,Yes,Full">
@@ -124,54 +125,54 @@
     </CONFIGPARAMS>
     <PRECONFIGS>
         <PRE>
+            <P name="inlet">0</P>
             <P name="texture">0</P>
-            <P name="width">0</P>
-            <P name="height">0</P>
+            <P name="scaley">0</P>
         </PRE>
         <PRE>
+            <P name="inlet">1</P>
             <P name="texture">1</P>
-            <P name="width">1</P>
-            <P name="height">1</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
+            <P name="inlet">1</P>
             <P name="texture">2</P>
-            <P name="width">1</P>
-            <P name="height">1</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
+            <P name="inlet">1</P>
             <P name="texture">3</P>
-            <P name="width">1</P>
-            <P name="height">1</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
+            <P name="inlet">1</P>
             <P name="texture">4</P>
-            <P name="width">1</P>
-            <P name="height">1</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
+            <P name="inlet">1</P>
             <P name="texture">5</P>
-            <P name="width">1</P>
-            <P name="height">1</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
+            <P name="inlet">1</P>
             <P name="texture">6</P>
-            <P name="width">1</P>
-            <P name="height">1</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
+            <P name="inlet">1</P>
             <P name="texture">7</P>
-            <P name="width">1</P>
-            <P name="height">1</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
+            <P name="inlet">1</P>
             <P name="texture">8</P>
-            <P name="width">1</P>
-            <P name="height">1</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
+            <P name="inlet">1</P>
             <P name="texture">9</P>
-            <P name="width">1</P>
-            <P name="height">1</P>
+            <P name="scaley">1</P>
         </PRE>
     </PRECONFIGS>
 </MOCONFIG>
