--- a/ola/00_OlaTest/moldeoapioscout.cfg
+++ b/ola/00_OlaTest/moldeoapioscout.cfg
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
-<MOCONFIG majorversion="0" minorversion="18">
+<MOCONFIG majorversion="0" minorversion="0">
     <DEFINITION name="" class="" />
     <UPDATE />
     <CONFIGPARAMS>
@@ -9,7 +9,9 @@
                 <D type="TXT">NUMERIC</D>
             </VAL>
         </PARAM>
-        <PARAM name="outlet" type="OUTLET" />
+        <PARAM name="outlet" type="OUTLET">
+            <VAL />
+        </PARAM>
         <PARAM name="script" type="SCRIPT">
             <VAL>
                 <D type="TXT"></D>
