--- a/ola/00_OlaTest/ola.cfg
+++ b/ola/00_OlaTest/ola.cfg
@@ -10,30 +10,59 @@
                 <D type="TXT"></D>
             </VAL>
         </PARAM>
-        <PARAM name="oladevice" type="TEXT">
+        <PARAM name="oladevice" type="TEXT" property="published">
+            <VAL>
+                <D type="TXT">127.0.0.1</D>
+                <D type="INT">1</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">127.0.0.1</D>
+                <D type="INT">1</D>
+            </VAL>
             <VAL>
                 <D type="TXT">127.0.0.1</D>
                 <D type="INT">1</D>
             </VAL>
         </PARAM>
-        <PARAM name="debug" type="NUM" options="YES,NO">
+        <PARAM name="debug" type="NUM" property="published" options="YES,NO">
+            <VAL>
+                <D type="INT">0</D>
+            </VAL>
             <VAL>
                 <D type="INT">0</D>
             </VAL>
         </PARAM>
         <PARAM name="red" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">sin(timeabs*0.00002*40)*(y==0)*(x&gt;=(220+40*cos(timeabs*0.00004)))*(x&lt;(221+40*cos(timeabs*0.00004)))</D>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.05</D>
             </VAL>
         </PARAM>
         <PARAM name="green" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">red+0.0*(y==0)*(x&gt;=(221+40*cos(timeabs*0.0002)))*(x&lt;(222+40*cos(timeabs*0.0002)))</D>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.05</D>
             </VAL>
         </PARAM>
         <PARAM name="blue" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">red+0.0*(y==0)*(x&gt;=(222+40*cos(timeabs*0.0002)))*(x&lt;(223+40*cos(timeabs*0.0002)))</D>
+                <D type="FUNCTION">(pixelindex&lt;84)*(pixelindex/84)</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">(pixelindex&lt;84)*(pixelindex/21)</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.05+0.95*(pixelindex&lt;84)*(0.5+0.5*cos(pixelindex*0.1))</D>
             </VAL>
         </PARAM>
         <PARAM name="alpha" type="FUNCTION" property="published">
@@ -41,37 +70,37 @@
                 <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="startuniverse" type="NUM">
+        <PARAM name="startuniverse" type="NUM" property="published">
             <VAL>
                 <D type="NUM">1</D>
             </VAL>
         </PARAM>
-        <PARAM name="leds" type="NUM">
+        <PARAM name="leds" type="NUM" property="published">
             <VAL>
                 <D type="NUM">50</D>
             </VAL>
         </PARAM>
-        <PARAM name="rgbtype" type="NUM">
+        <PARAM name="rgbtype" type="NUM" property="published">
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="testmode" type="NUM" options="None,">
+        <PARAM name="testmode" type="NUM" property="published" options="None,">
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="testoffset" type="NUM">
+        <PARAM name="testoffset" type="NUM" property="published">
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="checkserver" type="NUM">
+        <PARAM name="checkserver" type="NUM" property="published">
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="texture" type="TEXTURE">
+        <PARAM name="texture" type="TEXTURE" property="published">
             <VAL>
                 <D type="TXT">default</D>
             </VAL>
@@ -101,39 +130,94 @@
             </VAL>
             <VAL>
                 <D type="TXT">default</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="mode" type="NUM" property="published" options="RGBA,TEXTURE">
+            <VAL>
+                <D type="NUM">0</D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
     <PRECONFIGS>
         <PRE>
             <P name="texture">0</P>
+            <P name="oladevice">0</P>
+            <P name="debug">0</P>
+            <P name="red">0</P>
+            <P name="green">0</P>
+            <P name="blue">0</P>
         </PRE>
         <PRE>
             <P name="texture">1</P>
+            <P name="oladevice">1</P>
+            <P name="debug">1</P>
+            <P name="red">1</P>
+            <P name="green">1</P>
+            <P name="blue">1</P>
         </PRE>
         <PRE>
             <P name="texture">2</P>
+            <P name="oladevice">2</P>
+            <P name="debug">2</P>
+            <P name="red">2</P>
+            <P name="green">2</P>
+            <P name="blue">2</P>
         </PRE>
         <PRE>
             <P name="texture">3</P>
+            <P name="oladevice">3</P>
+            <P name="debug">3</P>
+            <P name="red">3</P>
+            <P name="green">3</P>
+            <P name="blue">3</P>
         </PRE>
         <PRE>
             <P name="texture">4</P>
+            <P name="oladevice">4</P>
+            <P name="debug">4</P>
+            <P name="red">4</P>
+            <P name="green">4</P>
+            <P name="blue">4</P>
         </PRE>
         <PRE>
             <P name="texture">5</P>
+            <P name="oladevice">5</P>
+            <P name="debug">5</P>
+            <P name="red">5</P>
+            <P name="green">5</P>
+            <P name="blue">5</P>
         </PRE>
         <PRE>
             <P name="texture">6</P>
+            <P name="oladevice">6</P>
+            <P name="debug">6</P>
+            <P name="red">6</P>
+            <P name="green">6</P>
+            <P name="blue">6</P>
         </PRE>
         <PRE>
             <P name="texture">7</P>
+            <P name="oladevice">7</P>
+            <P name="debug">7</P>
+            <P name="red">7</P>
+            <P name="green">7</P>
+            <P name="blue">7</P>
         </PRE>
         <PRE>
             <P name="texture">8</P>
+            <P name="oladevice">8</P>
+            <P name="debug">8</P>
+            <P name="red">8</P>
+            <P name="green">8</P>
+            <P name="blue">8</P>
         </PRE>
         <PRE>
             <P name="texture">9</P>
+            <P name="oladevice">9</P>
+            <P name="debug">9</P>
+            <P name="red">9</P>
+            <P name="green">9</P>
+            <P name="blue">9</P>
         </PRE>
     </PRECONFIGS>
 </MOCONFIG>
