Fixing for basic testing

--- a/kinect/00_KinectBasic/user.cfg
+++ b/kinect/00_KinectBasic/user.cfg
@@ -125,139 +125,13 @@
         </PARAM>
         <PARAM name="texture" type="TEXTURE" property="published">
             <VAL>
-                <D type="TXT">KINECTDEPTHFLOAT</D>
-                <D type="TXT">HeightBumpLight.cfg</D>
-                <D type="TXT">res:1920x1080</D>
-                <D type="TXT">Lll</D>
-                <D type="FUNCTION">1.0</D>
-            </VAL>
-            <VAL>
-                <D type="TXT">KINECTDEPTHFLOAT</D>
-            </VAL>
-            <VAL>
                 <D type="TXT">KINECTDEPTH</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">KINECTRGB</D>
             </VAL>
             <VAL>
                 <D type="TXT">KINECTUSER</D>
-            </VAL>
-            <VAL>
-                <D type="TXT">KINECTDEPTHFLOAT</D>
-                <D type="TXT">HeightBumpLightcolor.cfg</D>
-                <D type="TXT">res:1920x1080</D>
-                <D type="TXT">Lll2</D>
-                <D type="FUNCTION">1.0</D>
-            </VAL>
-            <VAL>
-                <D type="TXT">KINECTDEPTHFLOAT</D>
-                <D type="TXT">HeightBumpLightcolor2.cfg</D>
-                <D type="TXT">res:1920x1080</D>
-                <D type="TXT">Lll3</D>
-                <D type="FUNCTION">1.0</D>
-            </VAL>
-            <VAL>
-                <D type="TXT">KINECTDEPTH</D>
-                <D type="TXT">shaders\HeightBumpLight.cfg</D>
-                <D type="TXT">res:1920x1080</D>
-                <D type="TXT">hb</D>
-                <D type="FUNCTION">1.000000</D>
-            </VAL>
-            <VAL>
-                <D type="TXT">KINECTDEPTH</D>
-                <D type="TXT">shaders\HeightBumpLight.cfg</D>
-                <D type="TXT">res:1920x1080</D>
-                <D type="TXT">hb</D>
-                <D type="FUNCTION">1.000000</D>
-            </VAL>
-            <VAL>
-                <D type="TXT">KINECTDEPTH</D>
-                <D type="TXT">shaders\HeightBumpLight.cfg</D>
-                <D type="TXT">res:1920x1080</D>
-                <D type="TXT">hb</D>
-                <D type="FUNCTION">1.000000</D>
-            </VAL>
-            <VAL>
-                <D type="TXT">KINECTDEPTH</D>
-                <D type="TXT">shaders\HeightBumpLight.cfg</D>
-                <D type="TXT">res:1920x1080</D>
-                <D type="TXT">hb</D>
-                <D type="FUNCTION">1.000000</D>
-            </VAL>
-            <VAL>
-                <D type="TXT">KINECTDEPTH</D>
-                <D type="TXT">shaders\HeightBumpLight.cfg</D>
-                <D type="TXT">res:1920x1080</D>
-                <D type="TXT">hb</D>
-                <D type="FUNCTION">1.000000</D>
-            </VAL>
-            <VAL>
-                <D type="TXT">KINECTDEPTH</D>
-                <D type="TXT">shaders\HeightBumpLight.cfg</D>
-                <D type="TXT">res:1920x1080</D>
-                <D type="TXT">hb</D>
-                <D type="FUNCTION">1.000000</D>
-            </VAL>
-            <VAL>
-                <D type="TXT">KINECTDEPTH</D>
-                <D type="TXT">shaders\HeightBumpLight.cfg</D>
-                <D type="TXT">res:1920x1080</D>
-                <D type="TXT">hb</D>
-                <D type="FUNCTION">1.000000</D>
-            </VAL>
-            <VAL>
-                <D type="TXT">KINECTDEPTH</D>
-                <D type="TXT">shaders\HeightBumpLight.cfg</D>
-                <D type="TXT">res:1920x1080</D>
-                <D type="TXT">hb</D>
-                <D type="FUNCTION">1.000000</D>
-            </VAL>
-            <VAL>
-                <D type="TXT">KINECTDEPTH</D>
-                <D type="TXT">shaders\HeightBumpLight.cfg</D>
-                <D type="TXT">res:1920x1080</D>
-                <D type="TXT">hb</D>
-                <D type="FUNCTION">1.000000</D>
-            </VAL>
-            <VAL>
-                <D type="TXT">KINECTDEPTH</D>
-                <D type="TXT">shaders\HeightBumpLight.cfg</D>
-                <D type="TXT">res:1920x1080</D>
-                <D type="TXT">hb</D>
-                <D type="FUNCTION">1.000000</D>
-            </VAL>
-            <VAL>
-                <D type="TXT">KINECTDEPTH</D>
-                <D type="TXT">shaders\HeightBumpLight.cfg</D>
-                <D type="TXT">res:1920x1080</D>
-                <D type="TXT">hb</D>
-                <D type="FUNCTION">1.000000</D>
-            </VAL>
-            <VAL>
-                <D type="TXT">KINECTDEPTH</D>
-                <D type="TXT">shaders\HeightBumpLight.cfg</D>
-                <D type="TXT">res:1920x1080</D>
-                <D type="TXT">hb</D>
-                <D type="FUNCTION">1.000000</D>
-            </VAL>
-            <VAL>
-                <D type="TXT">KINECTDEPTH</D>
-                <D type="TXT">shaders\HeightBumpLight.cfg</D>
-                <D type="TXT">res:1920x1080</D>
-                <D type="TXT">hb</D>
-                <D type="FUNCTION">1.000000</D>
-            </VAL>
-            <VAL>
-                <D type="TXT">KINECTDEPTH</D>
-                <D type="TXT">shaders\HeightBumpLight.cfg</D>
-                <D type="TXT">res:1920x1080</D>
-                <D type="TXT">hb</D>
-                <D type="FUNCTION">1.000000</D>
-            </VAL>
-            <VAL>
-                <D type="TXT">KINECTDEPTH</D>
-                <D type="TXT">shaders\HeightBumpLight.cfg</D>
-                <D type="TXT">res:1920x1080</D>
-                <D type="TXT">hb</D>
-                <D type="FUNCTION">1.000000</D>
             </VAL>
         </PARAM>
         <PARAM name="blending" type="BLENDING" property="published">
